feat: enrich list namespace and schema (#154)
* feat: enrich list namespace and schema

* chore: cleanup dead code

* test: fix test

* chore: go mo tidy
